Closed
Bug 354300
Opened 19 years ago
Closed 19 years ago
Crashes [@ nsPopupSetFrame::OnCreate] [@ nsPopupSetFrame::Destroy] when removing popup on popupshowing
Categories
(Core :: XUL, defect)
Core
XUL
Tracking
()
VERIFIED
FIXED
mozilla1.9alpha1
People
(Reporter: martijn.martijn, Assigned: asqueella)
References
Details
(Keywords: crash, regression, testcase)
Crash Data
Attachments
(3 files, 1 obsolete file)
|
800 bytes,
application/vnd.mozilla.xul+xml
|
Details | |
|
714 bytes,
application/vnd.mozilla.xul+xml
|
Details | |
|
1.55 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
See upcoming testcase which crashes Mozilla within 1 second.
This regressed between 2006-03-23 and 2006-03-24, I think a regression from bug 326959.
Talkback ID: TB23749599Z
nsPopupSetFrame::Destroy [mozilla\layout\xul\base\src\nspopupsetframe.cpp, line 204]
nsFrameList::DestroyFrames [mozilla\layout\generic\nsframelist.cpp, line 60]
nsFrameList::DestroyFrames [mozilla\layout\generic\nsframelist.cpp, line 60]
nsFrameList::DestroyFrames [mozilla\layout\generic\nsframelist.cpp, line 60]
nsFrameManager::Destroy [mozilla\layout\base\nsframemanager.cpp, line 293]
DocumentViewerImpl::Destroy [mozilla\layout\base\nsdocumentviewer.cpp, line 1612]
DocumentViewerImpl::Show [mozilla\layout\base\nsdocumentviewer.cpp, line 1905]
nsPresContext::EnsureVisible [mozilla\layout\base\nsprescontext.cpp, line 1358]
PresShell::UnsuppressAndInvalidate [mozilla\layout\base\nspresshell.cpp, line 4907]
PresShell::UnsuppressPainting [mozilla\layout\base\nspresshell.cpp, line 4955]
Maybe this would be fixed by bug 279703?
| Reporter | ||
Comment 1•19 years ago
|
||
| Reporter | ||
Comment 2•19 years ago
|
||
Attachment #240127 -
Attachment is obsolete: true
| Assignee | ||
Comment 3•19 years ago
|
||
Bug 326959 exposed an existing problem with the code; this testcase crashes [@ nsPopupSetFrame::OnCreate] onload and in Firefox 2 too. (Simple) patch coming up.
Assignee: nobody → asqueella
Status: NEW → ASSIGNED
| Assignee | ||
Updated•19 years ago
|
OS: Windows XP → All
Hardware: PC → All
Summary: Crash [@ nsPopupSetFrame::Destroy] on reload when removing popu on popupshowing → Crashes [@ nsPopupSetFrame::OnCreate] [@ nsPopupSetFrame::Destroy] when removing popup on popupshowing
Target Milestone: --- → mozilla1.9alpha
| Assignee | ||
Comment 4•19 years ago
|
||
Attachment #240522 -
Flags: superreview?(roc)
Attachment #240522 -
Flags: review?(roc)
Attachment #240522 -
Flags: superreview?(roc)
Attachment #240522 -
Flags: superreview+
Attachment #240522 -
Flags: review?(roc)
Attachment #240522 -
Flags: review+
| Assignee | ||
Updated•19 years ago
|
Whiteboard: [checkin needed]
| Assignee | ||
Comment 5•19 years ago
|
||
Checked in by smaug.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Comment 6•19 years ago
|
||
Verified FIXED on trunk SeaMonkey build 2006-10-15-06 under Windows XP with the testcase at https://bugzilla.mozilla.org/attachment.cgi?id=240128&action=view; no crash.
Status: RESOLVED → VERIFIED
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: xptoolkit.menus → xptoolkit.widgets
Updated•15 years ago
|
Crash Signature: [@ nsPopupSetFrame::OnCreate]
[@ nsPopupSetFrame::Destroy]
You need to log in
before you can comment on or make changes to this bug.
Description
•