Bug 354300, Crashes [@ nsPopupSetFrame::OnCreate] [@ nsPopupSetFrame::Destroy] when removing popup on popupshowing, p=asqueella@gmail.com, r+sr=roc